level013/parser.output
Nonterminals useless in grammar

    boolexpr


Terminals unused in grammar

    IF
    ELSE
    WHILE
    DEF
    RETURN
    GE
    LE
    EQ
    NE
    AND
    OR
    ','
    '>'
    '<'


Rules useless in grammar

   20 boolexpr: expr '>' expr
   21         | expr '<' expr
   22         | expr GE expr
   23         | expr LE expr
   24         | expr EQ expr
   25         | expr NE expr
   26         | expr


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program stmt

    3 stmt: IDENT '=' expr ';'
    4     | INT IDENT '[' INTEGER ']' ';'
    5     | INT IDENT '[' INTEGER ']' '[' INTEGER ']' ';'
    6     | IDENT '[' expr ']' '=' expr ';'
    7     | IDENT '[' expr ']' '[' expr ']' '=' expr ';'
    8     | expr ';'
    9     | NEWLINE

   10 expr: INTEGER
   11     | IDENT '[' expr ']'
   12     | IDENT '[' expr ']' '[' expr ']'
   13     | IDENT
   14     | expr '+' expr
   15     | expr '-' expr
   16     | expr '*' expr
   17     | expr '/' expr
   18     | '(' expr ')'
   19     | '-' expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18
    ')' (41) 18
    '*' (42) 16
    '+' (43) 14
    ',' (44)
    '-' (45) 15 19
    '/' (47) 17
    ';' (59) 3 4 5 6 7 8
    '<' (60)
    '=' (61) 3 6 7
    '>' (62)
    '[' (91) 4 5 6 7 11 12
    ']' (93) 4 5 6 7 11 12
    error (256)
    INTEGER <ival> (258) 4 5 10
    IDENT <sval> (259) 3 4 5 6 7 11 12 13
    NEWLINE (260) 9
    IF (261)
    ELSE (262)
    WHILE (263)
    DEF (264)
    RETURN (265)
    GE (266)
    LE (267)
    EQ (268)
    NE (269)
    AND (270)
    OR (271)
    INT (272) 4 5
    UMINUS (273)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1 2
        on right: 0 2
    stmt (34)
        on left: 3 4 5 6 7 8 9
        on right: 2
    expr <val> (35)
        on left: 10 11 12 13 14 15 16 17 18 19
        on right: 3 6 7 8 11 12 14 15 16 17 18 19


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • stmt

    $end     shift, and go to state 2
    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    INT      shift, and go to state 6
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    stmt  go to state 9
    expr  go to state 10


State 2

    0 $accept: program $end •

    $default  accept


State 3

   10 expr: INTEGER •

    $default  reduce using rule 10 (expr)


State 4

    3 stmt: IDENT • '=' expr ';'
    6     | IDENT • '[' expr ']' '=' expr ';'
    7     | IDENT • '[' expr ']' '[' expr ']' '=' expr ';'
   11 expr: IDENT • '[' expr ']'
   12     | IDENT • '[' expr ']' '[' expr ']'
   13     | IDENT •

    '='  shift, and go to state 11
    '['  shift, and go to state 12

    $default  reduce using rule 13 (expr)


State 5

    9 stmt: NEWLINE •

    $default  reduce using rule 9 (stmt)


State 6

    4 stmt: INT • IDENT '[' INTEGER ']' ';'
    5     | INT • IDENT '[' INTEGER ']' '[' INTEGER ']' ';'

    IDENT  shift, and go to state 13


State 7

   19 expr: '-' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 15


State 8

   18 expr: '(' • expr ')'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 16


State 9

    2 program: program stmt •

    $default  reduce using rule 2 (program)


State 10

    8 stmt: expr • ';'
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ';'  shift, and go to state 21


State 11

    3 stmt: IDENT '=' • expr ';'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 22


State 12

    6 stmt: IDENT '[' • expr ']' '=' expr ';'
    7     | IDENT '[' • expr ']' '[' expr ']' '=' expr ';'
   11 expr: IDENT '[' • expr ']'
   12     | IDENT '[' • expr ']' '[' expr ']'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 23


State 13

    4 stmt: INT IDENT • '[' INTEGER ']' ';'
    5     | INT IDENT • '[' INTEGER ']' '[' INTEGER ']' ';'

    '['  shift, and go to state 24


State 14

   11 expr: IDENT • '[' expr ']'
   12     | IDENT • '[' expr ']' '[' expr ']'
   13     | IDENT •

    '['  shift, and go to state 25

    $default  reduce using rule 13 (expr)


State 15

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   19     | '-' expr •

    $default  reduce using rule 19 (expr)


State 16

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | '(' expr • ')'

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ')'  shift, and go to state 26


State 17

   14 expr: expr '+' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 27


State 18

   15 expr: expr '-' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 28


State 19

   16 expr: expr '*' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 29


State 20

   17 expr: expr '/' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 30


State 21

    8 stmt: expr ';' •

    $default  reduce using rule 8 (stmt)


State 22

    3 stmt: IDENT '=' expr • ';'
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ';'  shift, and go to state 31


State 23

    6 stmt: IDENT '[' expr • ']' '=' expr ';'
    7     | IDENT '[' expr • ']' '[' expr ']' '=' expr ';'
   11 expr: IDENT '[' expr • ']'
   12     | IDENT '[' expr • ']' '[' expr ']'
   14     | expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ']'  shift, and go to state 32


State 24

    4 stmt: INT IDENT '[' • INTEGER ']' ';'
    5     | INT IDENT '[' • INTEGER ']' '[' INTEGER ']' ';'

    INTEGER  shift, and go to state 33


State 25

   11 expr: IDENT '[' • expr ']'
   12     | IDENT '[' • expr ']' '[' expr ']'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 34


State 26

   18 expr: '(' expr ')' •

    $default  reduce using rule 18 (expr)


State 27

   14 expr: expr • '+' expr
   14     | expr '+' expr •
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 14 (expr)


State 28

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   15     | expr '-' expr •
   16     | expr • '*' expr
   17     | expr • '/' expr

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 15 (expr)


State 29

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   16     | expr '*' expr •
   17     | expr • '/' expr

    $default  reduce using rule 16 (expr)


State 30

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   17     | expr '/' expr •

    $default  reduce using rule 17 (expr)


State 31

    3 stmt: IDENT '=' expr ';' •

    $default  reduce using rule 3 (stmt)


State 32

    6 stmt: IDENT '[' expr ']' • '=' expr ';'
    7     | IDENT '[' expr ']' • '[' expr ']' '=' expr ';'
   11 expr: IDENT '[' expr ']' •
   12     | IDENT '[' expr ']' • '[' expr ']'

    '='  shift, and go to state 35
    '['  shift, and go to state 36

    $default  reduce using rule 11 (expr)


State 33

    4 stmt: INT IDENT '[' INTEGER • ']' ';'
    5     | INT IDENT '[' INTEGER • ']' '[' INTEGER ']' ';'

    ']'  shift, and go to state 37


State 34

   11 expr: IDENT '[' expr • ']'
   12     | IDENT '[' expr • ']' '[' expr ']'
   14     | expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ']'  shift, and go to state 38


State 35

    6 stmt: IDENT '[' expr ']' '=' • expr ';'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 39


State 36

    7 stmt: IDENT '[' expr ']' '[' • expr ']' '=' expr ';'
   12 expr: IDENT '[' expr ']' '[' • expr ']'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 40


State 37

    4 stmt: INT IDENT '[' INTEGER ']' • ';'
    5     | INT IDENT '[' INTEGER ']' • '[' INTEGER ']' ';'

    ';'  shift, and go to state 41
    '['  shift, and go to state 42


State 38

   11 expr: IDENT '[' expr ']' •
   12     | IDENT '[' expr ']' • '[' expr ']'

    '['  shift, and go to state 43

    $default  reduce using rule 11 (expr)


State 39

    6 stmt: IDENT '[' expr ']' '=' expr • ';'
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ';'  shift, and go to state 44


State 40

    7 stmt: IDENT '[' expr ']' '[' expr • ']' '=' expr ';'
   12 expr: IDENT '[' expr ']' '[' expr • ']'
   14     | expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ']'  shift, and go to state 45


State 41

    4 stmt: INT IDENT '[' INTEGER ']' ';' •

    $default  reduce using rule 4 (stmt)


State 42

    5 stmt: INT IDENT '[' INTEGER ']' '[' • INTEGER ']' ';'

    INTEGER  shift, and go to state 46


State 43

   12 expr: IDENT '[' expr ']' '[' • expr ']'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 47


State 44

    6 stmt: IDENT '[' expr ']' '=' expr ';' •

    $default  reduce using rule 6 (stmt)


State 45

    7 stmt: IDENT '[' expr ']' '[' expr ']' • '=' expr ';'
   12 expr: IDENT '[' expr ']' '[' expr ']' •

    '='  shift, and go to state 48

    $default  reduce using rule 12 (expr)


State 46

    5 stmt: INT IDENT '[' INTEGER ']' '[' INTEGER • ']' ';'

    ']'  shift, and go to state 49


State 47

   12 expr: IDENT '[' expr ']' '[' expr • ']'
   14     | expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ']'  shift, and go to state 50


State 48

    7 stmt: IDENT '[' expr ']' '[' expr ']' '=' • expr ';'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 51


State 49

    5 stmt: INT IDENT '[' INTEGER ']' '[' INTEGER ']' • ';'

    ';'  shift, and go to state 52


State 50

   12 expr: IDENT '[' expr ']' '[' expr ']' •

    $default  reduce using rule 12 (expr)


State 51

    7 stmt: IDENT '[' expr ']' '[' expr ']' '=' expr • ';'
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ';'  shift, and go to state 53


State 52

    5 stmt: INT IDENT '[' INTEGER ']' '[' INTEGER ']' ';' •

    $default  reduce using rule 5 (stmt)


State 53

    7 stmt: IDENT '[' expr ']' '[' expr ']' '=' expr ';' •

    $default  reduce using rule 7 (stmt)
